make future proof, expose some relevant apis
