# openapi/api_filepin.go
@@ -17,10 +17,6 @@ import (
 	"net/http"
 	"net/url"
 	"os"
-	
-	"fmt"
-	"sort"
-	"strings"
 )
 
 // Linger please
@@ -31,7 +27,7 @@ var (
 // FilepinApiService FilepinApi service
 type FilepinApiService service
 
-type ApiFileUploadRequest struct {
+type ApiPinataFileUploadRequest struct {
 	ctx context.Context
 	ApiService *FilepinApiService
 	file **os.File
@@ -40,33 +36,33 @@ type ApiFileUploadRequest struct {
 }
 
 // file you&#39;re attempting to upload to pinata
-func (r ApiFileUploadRequest) File(file *os.File) ApiFileUploadRequest {
+func (r ApiPinataFileUploadRequest) File(file *os.File) ApiPinataFileUploadRequest {
 	r.file = &file
 	return r
 }
-func (r ApiFileUploadRequest) PinataOptions(pinataOptions PinataOptions) ApiFileUploadRequest {
+func (r ApiPinataFileUploadRequest) PinataOptions(pinataOptions PinataOptions) ApiPinataFileUploadRequest {
 	r.pinataOptions = &pinataOptions
 	return r
 }
-func (r ApiFileUploadRequest) PinataMetadata(pinataMetadata PinataMetadata) ApiFileUploadRequest {
+func (r ApiPinataFileUploadRequest) PinataMetadata(pinataMetadata PinataMetadata) ApiPinataFileUploadRequest {
 	r.pinataMetadata = &pinataMetadata
 	return r
 }
 
-func (r ApiFileUploadRequest) Execute() (*PinataResponse, *http.Response, error) {
-	return r.ApiService.FileUploadExecute(r)
+func (r ApiPinataFileUploadRequest) Execute() (*PinataResponse, *http.Response, error) {
+	return r.ApiService.PinataFileUploadExecute(r)
 }
 
 /*
-FileUpload Upload file to IPFS
+PinataFileUpload Upload file to IPFS
 
 pinata services' upload file to ipfs option
 
  @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
- @return ApiFileUploadRequest
+ @return ApiPinataFileUploadRequest
 */
-func (a *FilepinApiService) FileUpload(ctx context.Context) ApiFileUploadRequest {
-	return ApiFileUploadRequest{
+func (a *FilepinApiService) PinataFileUpload(ctx context.Context) ApiPinataFileUploadRequest {
+	return ApiPinataFileUploadRequest{
 		ApiService: a,
 		ctx: ctx,
 	}
@@ -74,7 +70,7 @@ func (a *FilepinApiService) FileUpload(ctx context.Context) ApiFileUploadRequest
 
 // Execute executes the request
 //  @return PinataResponse
-func (a *FilepinApiService) FileUploadExecute(r ApiFileUploadRequest) (*PinataResponse, *http.Response, error) {
+func (a *FilepinApiService) PinataFileUploadExecute(r ApiPinataFileUploadRequest) (*PinataResponse, *http.Response, error) {
 	var (
 		localVarHTTPMethod   = http.MethodPost
 		localVarPostBody     interface{}
@@ -82,12 +78,12 @@ func (a *FilepinApiService) FileUploadExecute(r ApiFileUploadRequest) (*PinataRe
 		localVarReturnValue  *PinataResponse
 	)
 
-	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "FilepinApiService.FileUpload")
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "FilepinApiService.PinataFileUpload")
 	if err != nil {
 		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
 	}
 
-	localVarPath := localBasePath + "/"
+	localVarPath := localBasePath + "/pinning/pinFileToIPFS"
 
 	localVarHeaderParams := make(map[string]string)
 	localVarQueryParams := url.Values{}
@@ -146,8 +142,6 @@ func (a *FilepinApiService) FileUploadExecute(r ApiFileUploadRequest) (*PinataRe
 		return localVarReturnValue, nil, err
 	}
 
-	command, _ := GetCurlCommand(req)
-    fmt.Println(command)
 	localVarHTTPResponse, err := a.client.callAPI(req)
 	if err != nil || localVarHTTPResponse == nil {
 		return localVarReturnValue, localVarHTTPResponse, err
@@ -237,79 +231,4 @@ func (a *FilepinApiService) FileUploadExecute(r ApiFileUploadRequest) (*PinataRe
 	}
 
 	return localVarReturnValue, localVarHTTPResponse, nil
-}
-
-
-
-// CurlCommand contains exec.Command compatible slice + helpers
-type CurlCommand []string
-
-// append appends a string to the CurlCommand
-func (c *CurlCommand) append(newSlice ...string) {
-	*c = append(*c, newSlice...)
-}
-
-// String returns a ready to copy/paste command
-func (c *CurlCommand) String() string {
-	return strings.Join(*c, " ")
-}
-
-func bashEscape(str string) string {
-	return `'` + strings.Replace(str, `'`, `'\''`, -1) + `'`
-}
-
-// GetCurlCommand returns a CurlCommand corresponding to an http.Request
-func GetCurlCommand(req *http.Request) (*CurlCommand, error) {
-	if req.URL == nil {
-		return nil, fmt.Errorf("getCurlCommand: invalid request, req.URL is nil")
-	}
-
-	command := CurlCommand{}
-
-	command.append("curl")
-
-	schema := req.URL.Scheme
-	requestURL := req.URL.String()
-	if schema == "" {
-		schema = "http"
-		if req.TLS != nil {
-			schema = "https"
-		}
-		requestURL = schema + "://" + req.Host + req.URL.Path
-	}
-
-	if schema == "https" {
-		command.append("-k")
-	}
-
-	command.append("-X", bashEscape(req.Method))
-
-	if req.Body != nil {
-		var buff bytes.Buffer
-		_, err := buff.ReadFrom(req.Body)
-		if err != nil {
-			return nil, fmt.Errorf("getCurlCommand: buffer read from body error: %w", err)
-		}
-		// reset body for potential re-reads
-		req.Body = ioutil.NopCloser(bytes.NewBuffer(buff.Bytes()))
-		if len(buff.String()) > 0 {
-			bodyEscaped := bashEscape(buff.String())
-			command.append("-d", bodyEscaped)
-		}
-	}
-
-	var keys []string
-
-	for k := range req.Header {
-		keys = append(keys, k)
-	}
-	sort.Strings(keys)
-
-	for _, k := range keys {
-		command.append("-H", bashEscape(fmt.Sprintf("%s: %s", k, strings.Join(req.Header[k], " "))))
-	}
-
-	command.append(bashEscape(requestURL))
-
-	return &command, nil
 }
